# rust-devcontainer-template

./: .editorconfig  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
